Icons: Icon additions for profiler, remote files.
(integrated from master branch change 4afc80c by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -78,6 +78,7 @@ button, toolbarbutton, menuitem, tab
 .power-icon { .icon(); .icon-power2(); }
 .docs-icon { .icon(); .icon-bookmark(); }
 .rx-icon { .icon(); .icon-regexp2(); }
+.profiler-icon { .icon(); .icon-line-chart();}
 .http-inspector { .icon(); .icon-sphere2(); }
 #tb_pdkPerlMenu { .icon(); .icon-perl(); }
 #tb_pdkTclMenu { .icon(); .icon-quill4(); }
@@ -338,6 +339,11 @@ image.tab-icon
     .icon();
     .icon-folder();
 }
+
+.newfolder-icon{.icon(); .icon-folder-plus();}
+.refresh-icon{.icon(); .icon-refresh();}
+.upfolder-icon{.icon(); .icon-folder-upload();}
+.goback-icon{.icon(); .icon-arrow-left();}
 
 .breadcrumb-arrow
 {
