--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?rf9dfb');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?rf9dfb#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?rf9dfb') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?rf9dfb') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?rf9dfb#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?s3qoew');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?s3qoew#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?s3qoew') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?s3qoew') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?s3qoew#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -796,6 +796,11 @@
         content: @icon-trash;
     }
 }
+.icon-line-chart {
+    &:before {
+        content: @icon-line-chart;
+    }
+}
 .icon-display3 {
     &:before {
         content: @icon-display3;
@@ -1109,6 +1114,11 @@
 .icon-npm {
     &:before {
         content: @icon-npm;
+    }
+}
+.icon-folder-upload {
+    &:before {
+        content: @icon-folder-upload;
     }
 }
 .icon-eye4 {
