--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -154,6 +154,7 @@
 @icon-caret-square-o-up: "\f151";
 @icon-toggle-up: "\f151";
 @icon-trash: "\f1f8";
+@icon-line-chart: "\f201";
 @icon-display3: "\f26c";
 @icon-stop-circle: "\f28d";
 @icon-recurse-14: "\ee40";
@@ -217,6 +218,7 @@
 @icon-circle-code: "\eed3";
 @icon-terminal: "\eed4";
 @icon-npm: "\ef10";
+@icon-folder-upload: "\e9d3";
 @icon-eye4: "\ecae";
 @icon-eye3: "\ecb4";
 @icon-scc: "\ef46";
