UI: Update tab filestatus icons
(integrated from master branch change 9.2.1-1394-ge3bd84b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -18,6 +18,7 @@
 @import url("chrome://komodo/skin/global/components/scc.less");
 @import url("chrome://komodo/skin/global/components/customize.less");
 @import url("chrome://komodo/skin/global/components/languages.less");
+@import url("chrome://komodo/skin/global/components/filestatus.less");
 
 @import url("resource://profile/classic.less");
 
