--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -535,3 +535,20 @@ checkbox#search-in-subdirs .checkbox-spacer-box
     .icon();
     .icon-toggle-down();
 }
+
+/* File Status icons */
+
+.file-collab-icon
+{
+    .icon-user();
+}
+
+.file-readonly-icon
+{
+    .icon-lock();
+}
+
+.file-publishing-status-icon
+{
+    .icon-cloud();
+}
