--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?s3qoew');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?s3qoew#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?s3qoew') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?s3qoew') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?s3qoew#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?3bku18');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?3bku18#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?3bku18') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?3bku18') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?3bku18#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -224,6 +224,311 @@
 .icon-code2 {
     &:before {
         content: @icon-code2;
+    }
+}
+.icon-quill4 {
+    &:before {
+        content: @icon-quill4;
+    }
+}
+.icon-bookmark {
+    &:before {
+        content: @icon-bookmark;
+    }
+}
+.icon-files-empty2 {
+    &:before {
+        content: @icon-files-empty2;
+    }
+}
+.icon-file-plus2 {
+    &:before {
+        content: @icon-file-plus2;
+    }
+}
+.icon-copy3 {
+    &:before {
+        content: @icon-copy3;
+    }
+}
+.icon-paste2 {
+    &:before {
+        content: @icon-paste2;
+    }
+}
+.icon-folder-plus {
+    &:before {
+        content: @icon-folder-plus;
+    }
+}
+.icon-folder-open {
+    &:before {
+        content: @icon-folder-open;
+    }
+}
+.icon-envelop {
+    &:before {
+        content: @icon-envelop;
+    }
+}
+.icon-printer3 {
+    &:before {
+        content: @icon-printer3;
+    }
+}
+.icon-display2 {
+    &:before {
+        content: @icon-display2;
+    }
+}
+.icon-undo2 {
+    &:before {
+        content: @icon-undo2;
+    }
+}
+.icon-redo2 {
+    &:before {
+        content: @icon-redo2;
+    }
+}
+.icon-users2 {
+    &:before {
+        content: @icon-users2;
+    }
+}
+.icon-users4 {
+    &:before {
+        content: @icon-users4;
+    }
+}
+.icon-bug {
+    &:before {
+        content: @icon-bug;
+    }
+}
+.icon-lab {
+    &:before {
+        content: @icon-lab;
+    }
+}
+.icon-briefcase3 {
+    &:before {
+        content: @icon-briefcase3;
+    }
+}
+.icon-power2 {
+    &:before {
+        content: @icon-power2;
+    }
+}
+.icon-menu3 {
+    &:before {
+        content: @icon-menu3;
+    }
+}
+.icon-sphere2 {
+    &:before {
+        content: @icon-sphere2;
+    }
+}
+.icon-earth2 {
+    &:before {
+        content: @icon-earth2;
+    }
+}
+.icon-question4 {
+    &:before {
+        content: @icon-question4;
+    }
+}
+.icon-plus2 {
+    &:before {
+        content: @icon-plus2;
+    }
+}
+.icon-plus-circle {
+    &:before {
+        content: @icon-plus-circle;
+    }
+}
+.icon-plus-circle2 {
+    &:before {
+        content: @icon-plus-circle2;
+    }
+}
+.icon-minus-circle2 {
+    &:before {
+        content: @icon-minus-circle2;
+    }
+}
+.icon-info2 {
+    &:before {
+        content: @icon-info2;
+    }
+}
+.icon-cancel-circle2 {
+    &:before {
+        content: @icon-cancel-circle2;
+    }
+}
+.icon-cross3 {
+    &:before {
+        content: @icon-cross3;
+    }
+}
+.icon-checkmark {
+    &:before {
+        content: @icon-checkmark;
+    }
+}
+.icon-checkmark2 {
+    &:before {
+        content: @icon-checkmark2;
+    }
+}
+.icon-play3 {
+    &:before {
+        content: @icon-play3;
+    }
+}
+.icon-pause {
+    &:before {
+        content: @icon-pause;
+    }
+}
+.icon-stop {
+    &:before {
+        content: @icon-stop;
+    }
+}
+.icon-play {
+    &:before {
+        content: @icon-play;
+    }
+}
+.icon-pause2 {
+    &:before {
+        content: @icon-pause2;
+    }
+}
+.icon-stop2 {
+    &:before {
+        content: @icon-stop2;
+    }
+}
+.icon-arrow-up3 {
+    &:before {
+        content: @icon-arrow-up3;
+    }
+}
+.icon-arrow-right2 {
+    &:before {
+        content: @icon-arrow-right2;
+    }
+}
+.icon-arrow-right3 {
+    &:before {
+        content: @icon-arrow-right3;
+    }
+}
+.icon-arrow-down3 {
+    &:before {
+        content: @icon-arrow-down3;
+    }
+}
+.icon-arrow-left2 {
+    &:before {
+        content: @icon-arrow-left2;
+    }
+}
+.icon-arrow-up5 {
+    &:before {
+        content: @icon-arrow-up5;
+    }
+}
+.icon-arrow-right5 {
+    &:before {
+        content: @icon-arrow-right5;
+    }
+}
+.icon-arrow-down5 {
+    &:before {
+        content: @icon-arrow-down5;
+    }
+}
+.icon-arrow-left5 {
+    &:before {
+        content: @icon-arrow-left5;
+    }
+}
+.icon-checkbox-checked2 {
+    &:before {
+        content: @icon-checkbox-checked2;
+    }
+}
+.icon-checkbox-unchecked2 {
+    &:before {
+        content: @icon-checkbox-unchecked2;
+    }
+}
+.icon-radio-checked {
+    &:before {
+        content: @icon-radio-checked;
+    }
+}
+.icon-radio-unchecked {
+    &:before {
+        content: @icon-radio-unchecked;
+    }
+}
+.icon-scissors2 {
+    &:before {
+        content: @icon-scissors2;
+    }
+}
+.icon-regexp2 {
+    &:before {
+        content: @icon-regexp2;
+    }
+}
+.icon-circle-css {
+    &:before {
+        content: @icon-circle-css;
+    }
+}
+.icon-circle-code {
+    &:before {
+        content: @icon-circle-code;
+    }
+}
+.icon-terminal {
+    &:before {
+        content: @icon-terminal;
+    }
+}
+.icon-npm {
+    &:before {
+        content: @icon-npm;
+    }
+}
+.icon-folder-upload {
+    &:before {
+        content: @icon-folder-upload;
+    }
+}
+.icon-eye4 {
+    &:before {
+        content: @icon-eye4;
+    }
+}
+.icon-eye3 {
+    &:before {
+        content: @icon-eye3;
+    }
+}
+.icon-scc {
+    &:before {
+        content: @icon-scc;
     }
 }
 .icon-regexp-14 {
@@ -831,309 +1136,14 @@
         content: @icon-smart-case;
     }
 }
-.icon-quill4 {
+.icon-user {
     &:before {
-        content: @icon-quill4;
+        content: @icon-user;
     }
 }
-.icon-bookmark {
+.icon-cloud {
     &:before {
-        content: @icon-bookmark;
-    }
-}
-.icon-files-empty2 {
-    &:before {
-        content: @icon-files-empty2;
-    }
-}
-.icon-file-plus2 {
-    &:before {
-        content: @icon-file-plus2;
-    }
-}
-.icon-copy3 {
-    &:before {
-        content: @icon-copy3;
-    }
-}
-.icon-paste2 {
-    &:before {
-        content: @icon-paste2;
-    }
-}
-.icon-folder-plus {
-    &:before {
-        content: @icon-folder-plus;
-    }
-}
-.icon-folder-open {
-    &:before {
-        content: @icon-folder-open;
-    }
-}
-.icon-envelop {
-    &:before {
-        content: @icon-envelop;
-    }
-}
-.icon-printer3 {
-    &:before {
-        content: @icon-printer3;
-    }
-}
-.icon-display2 {
-    &:before {
-        content: @icon-display2;
-    }
-}
-.icon-undo2 {
-    &:before {
-        content: @icon-undo2;
-    }
-}
-.icon-redo2 {
-    &:before {
-        content: @icon-redo2;
-    }
-}
-.icon-users2 {
-    &:before {
-        content: @icon-users2;
-    }
-}
-.icon-users4 {
-    &:before {
-        content: @icon-users4;
-    }
-}
-.icon-bug {
-    &:before {
-        content: @icon-bug;
-    }
-}
-.icon-lab {
-    &:before {
-        content: @icon-lab;
-    }
-}
-.icon-briefcase3 {
-    &:before {
-        content: @icon-briefcase3;
-    }
-}
-.icon-power2 {
-    &:before {
-        content: @icon-power2;
-    }
-}
-.icon-menu3 {
-    &:before {
-        content: @icon-menu3;
-    }
-}
-.icon-sphere2 {
-    &:before {
-        content: @icon-sphere2;
-    }
-}
-.icon-earth2 {
-    &:before {
-        content: @icon-earth2;
-    }
-}
-.icon-question4 {
-    &:before {
-        content: @icon-question4;
-    }
-}
-.icon-plus2 {
-    &:before {
-        content: @icon-plus2;
-    }
-}
-.icon-plus-circle {
-    &:before {
-        content: @icon-plus-circle;
-    }
-}
-.icon-plus-circle2 {
-    &:before {
-        content: @icon-plus-circle2;
-    }
-}
-.icon-minus-circle2 {
-    &:before {
-        content: @icon-minus-circle2;
-    }
-}
-.icon-info2 {
-    &:before {
-        content: @icon-info2;
-    }
-}
-.icon-cancel-circle2 {
-    &:before {
-        content: @icon-cancel-circle2;
-    }
-}
-.icon-cross3 {
-    &:before {
-        content: @icon-cross3;
-    }
-}
-.icon-checkmark {
-    &:before {
-        content: @icon-checkmark;
-    }
-}
-.icon-checkmark2 {
-    &:before {
-        content: @icon-checkmark2;
-    }
-}
-.icon-play3 {
-    &:before {
-        content: @icon-play3;
-    }
-}
-.icon-pause {
-    &:before {
-        content: @icon-pause;
-    }
-}
-.icon-stop {
-    &:before {
-        content: @icon-stop;
-    }
-}
-.icon-play {
-    &:before {
-        content: @icon-play;
-    }
-}
-.icon-pause2 {
-    &:before {
-        content: @icon-pause2;
-    }
-}
-.icon-stop2 {
-    &:before {
-        content: @icon-stop2;
-    }
-}
-.icon-arrow-up3 {
-    &:before {
-        content: @icon-arrow-up3;
-    }
-}
-.icon-arrow-right2 {
-    &:before {
-        content: @icon-arrow-right2;
-    }
-}
-.icon-arrow-right3 {
-    &:before {
-        content: @icon-arrow-right3;
-    }
-}
-.icon-arrow-down3 {
-    &:before {
-        content: @icon-arrow-down3;
-    }
-}
-.icon-arrow-left2 {
-    &:before {
-        content: @icon-arrow-left2;
-    }
-}
-.icon-arrow-up5 {
-    &:before {
-        content: @icon-arrow-up5;
-    }
-}
-.icon-arrow-right5 {
-    &:before {
-        content: @icon-arrow-right5;
-    }
-}
-.icon-arrow-down5 {
-    &:before {
-        content: @icon-arrow-down5;
-    }
-}
-.icon-arrow-left5 {
-    &:before {
-        content: @icon-arrow-left5;
-    }
-}
-.icon-checkbox-checked2 {
-    &:before {
-        content: @icon-checkbox-checked2;
-    }
-}
-.icon-checkbox-unchecked2 {
-    &:before {
-        content: @icon-checkbox-unchecked2;
-    }
-}
-.icon-radio-checked {
-    &:before {
-        content: @icon-radio-checked;
-    }
-}
-.icon-radio-unchecked {
-    &:before {
-        content: @icon-radio-unchecked;
-    }
-}
-.icon-scissors2 {
-    &:before {
-        content: @icon-scissors2;
-    }
-}
-.icon-regexp2 {
-    &:before {
-        content: @icon-regexp2;
-    }
-}
-.icon-circle-css {
-    &:before {
-        content: @icon-circle-css;
-    }
-}
-.icon-circle-code {
-    &:before {
-        content: @icon-circle-code;
-    }
-}
-.icon-terminal {
-    &:before {
-        content: @icon-terminal;
-    }
-}
-.icon-npm {
-    &:before {
-        content: @icon-npm;
-    }
-}
-.icon-folder-upload {
-    &:before {
-        content: @icon-folder-upload;
-    }
-}
-.icon-eye4 {
-    &:before {
-        content: @icon-eye4;
-    }
-}
-.icon-eye3 {
-    &:before {
-        content: @icon-eye3;
-    }
-}
-.icon-scc {
-    &:before {
-        content: @icon-scc;
+        content: @icon-cloud;
     }
 }
 
