--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -40,6 +40,8 @@
 @icon-database2: "\e034";
 @icon-markup: "\e035";
 @icon-code2: "\e036";
+@icon-user: "\f007";
+@icon-cloud: "\f0c2";
 @icon-regexp-14: "\eed1";
 @icon-search: "\f002";
 @icon-star: "\f005";
