icons: missing bugs icon, formatting
(integrated from master branch change 647acd8 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -61,10 +61,11 @@ button, toolbarbutton, menuitem, tab
 .native-redo-icon { .icon(); .icon-redo2(); }
 .newtab-icon { font-size: 14px; .icon-plus(); }
 .new-file-icon { .icon(); .icon-file-plus2(); }
-.new-template-icon { .icon(); .icon-file-text()}
-.project-icon { .icon(); .icon-archive()}
-.open-file-icon { .icon(); .icon-folder-open2()}
-.open-workspace-icon{ .icon(); .icon-display3()}
+.new-template-icon { .icon(); .icon-file-text(); }
+.project-icon { .icon(); .icon-archive(); }
+.open-file-icon { .icon(); .icon-folder-open2(); }
+.open-workspace-icon{ .icon(); .icon-display3(); }
+.bug-icon{ .icon(); .icon-bug(); }
 .preferences-icon { .icon();.icon-cog(); }
 .customize-panes-icon { .icon();.icon-th(); }
 .native-new-file-icon { .icon(); .icon-file-plus2(); }
