--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -121,6 +121,34 @@ button, toolbarbutton, menuitem, tab
 .komodo-button-bugs { .icon(); .icon-bug(); }
 .native-print-icon { .icon-printer3(); }
 .help-icon { .icon-question4(); }
+.newfolder-icon{.icon(); .icon-folder-plus(); margin-right: 6px; }
+.refresh-icon{.icon(); .icon-refresh(); margin-right: 6px; }
+.upfolder-icon{.icon(); .icon-folder-upload(); margin-right: 6px; }
+.goback-icon{.icon(); .icon-arrow-left(); margin-right: 6px; }
+
+// Work around to space out icons from their text or neighbours
+// Add any new icons that require spacing this section so we
+// can easily refactor them out later
+.help-icon > button > hbox > image
+{
+    margin-right: 6px;
+}
+.bug-icon,
+.newfolder-icon,
+.refresh-icon,
+.upfolder-icon,
+.goback-icon
+{
+    & > hbox,vbox
+    {
+        & > image
+        {
+            margin-right: 6px;
+        }
+    }
+}
+
+// Finish spacing button fix
 .overflow-toolbarbutton > .toolbarbutton-text { .icon(); .icon-arrow-down3(); }
 
 .menu-history-icon > .toolbarbutton-text { .icon(); .icon-clock-o(); }
@@ -340,11 +368,6 @@ image.tab-icon
     .icon();
     .icon-folder();
 }
-
-.newfolder-icon{.icon(); .icon-folder-plus();}
-.refresh-icon{.icon(); .icon-refresh();}
-.upfolder-icon{.icon(); .icon-folder-upload();}
-.goback-icon{.icon(); .icon-arrow-left();}
 
 .breadcrumb-arrow
 {
