UI: Force restart on OSX when changing native decorations - fixes #1192
(integrated from master branch change 9.2.1-1403-gdfc510f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -88,6 +88,12 @@ input.textbox-input
     
 }
 
+notification
+{
+    background: @contrast !important;
+    padding: 4px;
+}
+
 menupopup
 {
     color: @foreground;
