UI: Fix console input height not scaling
(integrated from master branch change 9.2.1-1404-gf3cf0b9 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -702,7 +702,7 @@ dialog:root,
 
 .widgetToolbarWrap
 {
-    height: 29px;
+    min-height: 29px;
     background: @contrast;
     -moz-box-pack: center;
     -moz-box-align: center;
