UI: Ensure dynamic buttons are consistently sized
(integrated from master branch change 9.2.1-1408-gd1eece2 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -281,6 +281,11 @@
         display: none;
     }
     
+    .dynamic-button
+    {
+        min-width: 24px;
+    }
+    
     .dynamic-button[type="menu-button"]:before
     {
         content: none !important; /* Remove icon from main element, it's added to a sub element */
