UI: Recovered the tab styles (ie. vertical tabs)
(integrated from master branch change 9.2.1-1411-gda2702e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -74,6 +74,10 @@ toolbarbutton[type="menu-button"].dynamic-button {
   -moz-binding: url('chrome://komodo/content/bindings/buttons.xml#dynamic-toolbarbutton-menu');
 }
 
+toolbarbutton[type="menu"] {
+  -moz-binding: url('chrome://komodo/content/bindings/buttons.xml#menu');
+}
+
 menuitem[type="checkbox"],
 menuitem[type="radio"] {
   -moz-binding: url("chrome://komodo/content/bindings/menu.xml#menuitem-iconic");
