--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?3bku18');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?3bku18#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?3bku18') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?3bku18') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?3bku18#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?57wbkg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?57wbkg#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?57wbkg') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?57wbkg') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?57wbkg#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -1144,6 +1144,16 @@
 .icon-cloud {
     &:before {
         content: @icon-cloud;
+    }
+}
+.icon-angle-left {
+    &:before {
+        content: @icon-angle-left;
+    }
+}
+.icon-angle-right2 {
+    &:before {
+        content: @icon-angle-right2;
     }
 }
 
