--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -42,6 +42,8 @@
 @icon-code2: "\e036";
 @icon-user: "\f007";
 @icon-cloud: "\f0c2";
+@icon-angle-left: "\f104";
+@icon-angle-right2: "\f106";
 @icon-regexp-14: "\eed1";
 @icon-search: "\f002";
 @icon-star: "\f005";
