UI: Style warning tree rows
(integrated from master branch change 9.2.1-1417-g516724e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -437,6 +437,12 @@ treechildren::-moz-tree-cell-text(container)
     color: darken(@foreground, 30%) !important;
 }
 
+treechildren::-moz-tree-row(warning)
+{
+    background: @state-warning;
+    color: @state-foreground;
+}
+
 treechildren::-moz-tree-row(selected)
 {
     color: @selected-foreground;
