UI: Revert back to using calc() for the toolbar widths
As they ended up not being the cause of the repaint issue

(integrated from master branch change 9.2.1-1419-ge312a00 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -137,51 +137,30 @@
     }
 }
 
-#main-toolboxrow
+&[os-name="Darwin"]
 {
-    width: 50vw;
+    #main-toolboxrow,
+    #second-toolboxrow
+    {
+        width: ~"calc(50vw - 240px)";
+    }   
+}
+
+&:not([os-name="Darwin"])
+{   
+    #main-toolboxrow,
+    #second-toolboxrow
+    {
+        width: ~"calc(50vw - 270px)";
+    }    
 }
 
 #second-toolboxrow 
 {
     -moz-box-direction: reverse;
-    width: 50vw;
-    
     & > hbox
     {
         -moz-box-pack: end;
-    }
-}
-
-// I really don't know why OSX is a special little butterfly this time around,
-// but it  is. And we have to deal with it.
-&[os-name="Darwin"]
-{
-    #main-toolboxrow
-    {
-        margin-right: -200px;
-        padding-right: 200px;
-    }
-    
-    #second-toolboxrow 
-    {
-        margin-left: -200px;
-        padding-left: 200px;
-    }
-}
-
-&:not([os-name="Darwin"])
-{
-    #main-toolboxrow
-    {
-        margin-right: -250px;
-        padding-right: 250px;
-    }
-    
-    #second-toolboxrow 
-    {
-        margin-left: -250px;
-        padding-left: 250px;
     }
 }
 
