--- a/src/chrome/komodo/skin/global/classic.toolbar.less
+++ b/src/chrome/komodo/skin/global/classic.toolbar.less
@@ -5,8 +5,6 @@
         -moz-box-ordinal-group: 0;
         width: auto !important;
         -moz-binding: unset !important;
-        margin-right: inherit !important;
-        padding-right: inherit !important;
     }
     
     #second-toolboxrow
@@ -14,8 +12,6 @@
         -moz-box-ordinal-group: 1;
         width: auto !important;
         -moz-binding: unset !important;
-        margin-left: inherit !important;
-        padding-left: inherit !important;
         
         spacer
         {
@@ -43,5 +39,10 @@
     #notification-widget #notification-widget-textbox
     {
         height: auto !important;
+    }
+    
+    #main-toolboxrow-wrapper .overflow-toolbaritem
+    {
+        visibility: collapse;
     }
 }
