UI: Ensure view splitter is large enough to grab
(integrated from master branch change 9.2.1-1420-g06a99a8 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -311,6 +311,30 @@ statusbar
     }
 }
 
+/* View Spliter */
+
+
+#multiview-splitter
+{
+    position: relative;
+    z-index: 999;
+    background-color: transparent;
+    
+    &[orient="horizontal"]
+    {
+        width: 5px;
+        border-right: 1px solid @contrast;
+        margin-left: -4px;
+    }
+    
+    &[orient="vertical"]
+    {
+        height: 5px;
+        border-bottom: 1px solid @contrast;
+        margin-top: -4px;
+    }
+}
+
 /* Workspace splitter */
 
 splitter
