Focus Mode: Make sure the toolbar button is self contained
(integrated from master branch change 9.2.1-1424-g69bce51 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -85,6 +85,12 @@ dialog:not([_hidechrome="true"]):not(.embedded)
         {
             visibility: visible;
             
+            toolbarbutton.sdk-button .toolbarbutton-text
+            {
+                visibility: collapse;
+                display: none;
+            }
+            
             & > spacer, #windowButtons
             {
                 width: 90px;
