--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -86,7 +86,7 @@ button, toolbarbutton, menuitem, tab
 #toggleLeftPane { .icon(); .icon-layout-left(); }
 #toggleRightPane { .icon(); .icon-layout-right(); }
 #toggleBottomPane { .icon(); .icon-layout-bottom(); }
-#toggleFocusMode { .icon(); .icon-eye3(); }
+.eye-icon { .icon-eye3(); }
 .tabPicker-icon > .toolbarbutton-icon { .icon(); .icon-tab-down(); }
 .tabs-select-button > .toolbarbutton-icon-box { .icon(); .icon-tab-down(); }
 .scc-button-menu .toolbarbutton-icon { .icon(); .icon-menu2(); }
