UI: fixed menubar not being toggleable when toolbar is hidden
(integrated from master branch change 9.2.1-1425-g9d3e588 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -5,9 +5,40 @@
 #toolbox_main
 {
     border: 0;
-    padding: 4px;
-    color: @foreground-special;
-    background: @special;
+    
+    #unifiedMenuButton .toolbarbutton-text
+    {
+        color: @foreground-special;
+    }
+    
+    #toolbar-menubar
+    {
+        toolbaritem
+        {
+            margin: 0;
+            padding: 0;
+            border-radius: 0;
+        }
+    }
+    
+    #unifiedMenuButton .toolbarbutton-text
+    {
+        color: @foreground-special;
+    }
+    
+    #titlebar
+    {
+        padding: 0 4px 4px;
+        color: @foreground-special;
+        background: @special;
+    }
+    
+    #main-toolboxrow-wrapper
+    {
+        padding: 4px;
+        color: @foreground-special;
+        background: @special;
+    }
     
     toolbar toolbaritem
     {
