--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -66,7 +66,7 @@ dialog:not([_hidechrome="true"]):not(.embedded)
 
 #komodo_main[_hidechrome="true"]
 {
-    #toolbox_main
+    #toolbox_main #main-toolboxrow-wrapper
     {
         padding-top: 0;
     }
@@ -100,11 +100,6 @@ dialog:not([_hidechrome="true"]):not(.embedded)
                     font-size: 12px !important;
                 }
             }
-        }
-        
-        #toolbox_main
-        {
-            padding: 0 2px 2px;
         }
     }
     
@@ -211,7 +206,7 @@ resizer
         }
     }
     
-    #toolbox_main
+    #main-toolboxrow-wrapper
     {
         padding-top: 5px !important;
     }
