--- a/src/chrome/komodo/skin/global/reset.less
+++ b/src/chrome/komodo/skin/global/reset.less
@@ -1,4 +1,4 @@
-*:not(scrollbar), ::-moz-tree-row, menuseparator, tabpanels, toolboxrow
+*:not(scrollbar), ::-moz-tree-row, menuseparator, tabpanels, toolboxrow, treecolpicker
 {
     -moz-appearance: none;
     background: transparent;
