--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -79,7 +79,7 @@ button, toolbarbutton, menuitem, tab
 .power-icon { .icon(); .icon-power2(); }
 .docs-icon { .icon(); .icon-bookmark(); }
 .rx-icon { .icon(); .icon-regexp2(); }
-.profiler-icon { .icon(); .icon-line-chart();}
+.profiler-icon > .box-inherit { .icon(); .icon-line-chart();}
 .http-inspector { .icon(); .icon-sphere2(); }
 #tb_pdkPerlMenu { .icon(); .icon-perl(); }
 #tb_pdkTclMenu { .icon(); .icon-quill4(); }
@@ -127,6 +127,7 @@ button, toolbarbutton, menuitem, tab
 .upfolder-icon{.icon(); .icon-folder-upload(); margin-right: 6px; }
 .goback-icon{.icon(); .icon-arrow-left(); margin-right: 6px; }
 .goforward-icon{.icon(); .icon-arrow-right(); margin-right: 6px; }
+.columns-icon { .icon(); .icon-columns(); }
 
 // Work around to space out icons from their text or neighbours
 // Add any new icons that require spacing this section so we
