UI: Update default colors to match scheme colors
(integrated from master branch change 9.2.1-1430-g150f4bd by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -26,7 +26,7 @@
 @foreground-special: #FFF;
 @contrast-special: #326ECD;
 @textbox-special: #FFF;
-@textbox-foreground-special: #565656;
+@textbox-foreground-special: #28282E;
 @icons-special: #FFF;
 
 /* Widgets */
@@ -34,9 +34,9 @@
 @foreground-widget: @foreground;
 @contrast-widget: @contrast;
 @special-widget: @special;
-@special-foreground-widget: @special;
-@textbox-widget: @contrast;
-@textbox-foreground-widget: @foreground;
+@special-foreground-widget: @foreground-special;
+@textbox-widget: @textbox;
+@textbox-foreground-widget: @textbox-foreground;
 @icons-widget: @icons;
 
 /* SCC */
