UI: Fix dialog sizing - fixes #1303
(integrated from master branch change 9.2.1-1431-g0ffa82b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -15,6 +15,8 @@
 .dialog:root[_hidechrome="true"]:not(.embedded),
 dialog:root[_hidechrome="true"]:not(.embedded)
 {
+    overflow: -moz-hidden-unscrollable !important;
+    
     .window-wrapper,
     .dialog-content-box,
     .dialog-button-box
