UI: Hide min/max buttons in dialogs
(integrated from master branch change 9.2.1-1432-g5fee4b6 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -50,6 +50,12 @@ dialog:root[_hidechrome="true"]:not(.embedded)
     }
 }
 
+dialog #windowButtons .icon-plus-circle2,
+dialog #windowButtons .icon-minus-circle2
+{
+    visibility: collapse;
+}
+
 /* Dialogs with default chrome */
 
 .dialog:not([_hidechrome="true"]):not(.embedded),
